--- a/NamedPipesSample.WindowsService/NamedPipesSample.WindowsService.csproj
+++ b/NamedPipesSample.WindowsService/NamedPipesSample.WindowsService.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="H.Pipes" Version="1.15.2" />
+    <PackageReference Include="H.ProxyFactory.Pipes" Version="0.8.2" />
     <PackageReference Include="System.Management" Version="6.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.0" />
   </ItemGroup>
