feat: To H.Ipc.

--- a/NamedPipesSample.WindowsService/NamedPipesSample.WindowsService.csproj
+++ b/NamedPipesSample.WindowsService/NamedPipesSample.WindowsService.csproj
@@ -2,13 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="H.ProxyFactory.Pipes" Version="0.8.2" />
+    <PackageReference Include="H.Ipc.Core" Version="0.9.7" />
+    <PackageReference Include="H.Ipc.Generator" Version="0.9.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="H.Pipes.AccessControl" Version="2.0.34" />
     <PackageReference Include="System.Management" Version="6.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.0" />
   </ItemGroup>
