--- a/NamedPipesSample.TrayIcon/NamedPipesSample.TrayIcon.csproj
+++ b/NamedPipesSample.TrayIcon/NamedPipesSample.TrayIcon.csproj
@@ -12,9 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="H.ProxyFactory.Pipes" Version="0.8.2" />
+    <PackageReference Include="H.Ipc.Core" Version="0.9.7" />
+    <PackageReference Include="H.Ipc.Generator" Version="0.9.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="H.Pipes" Version="2.0.34" />
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
-    <PackageReference Include="System.Management" Version="4.7.0" />
+    <PackageReference Include="System.Management" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
